# AJA

./: .agentx_history  .env.example  .gitignore  AgentX Launcher.bat  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  START.bat  STRUCTURE_MAP.md  agent.json  agents.md  agentx.bat  agentx.json  aja.json  benchmark_tps.py  debug_loop.bat  final_verify.py  install_native.bat  launch_gold.bat  list_models.py  package-lock.json  package.json  providers.json  pyproject.toml  real_kill.bat  setup_env.ps1  start_llama.bat  start_llama_gold.bat  start_llama_lightning.bat  start_llama_turbo.bat  test_agent_delegation.py  test_agent_json.py  test_agent_memory.py  test_api.py  test_mission.py  test_recursion.py  verify_rag.py
apps/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
libs/aja-core/: package.json  pyproject.toml
libs/aja-core/aja/: __init__.py  __main__.py  config.py  config_schema.py  copilot_auth.py  gateway.py  llm.py  main.py
libs/aja-core/aja/agents/: base.py  worker.py
libs/aja-core/aja/api/: bridge.py  interfaces.py
libs/aja-core/aja/autonomy/: intent_engine.py  reflection.py
libs/aja-core/aja/benchmark/: evaluator.py
libs/aja-core/aja/capabilities/: __init__.py  agent_cap.py  app_connector.py  handover.py  mcp_cap.py  terminal.py
libs/aja-core/aja/dashboard/: api.py
libs/aja-core/aja/decision/: calibration.py  context.py  convergence.py  critic.py  disagreement.py  engine.py  evaluator.py  failure_analysis.py  feedback.py  metrics.py  retry.py  rules.py  validator.py
libs/aja-core/aja/embeddings/: __init__.py  index.py  service.py  similarity.py
libs/aja-core/aja/gateway/: gateway_runner.py  orchestrator.py  persistence.py  presenter.py  server.py  tg_client.py  vision.py
libs/aja-core/aja/goals/: goal_engine.py
libs/aja-core/aja/interface/: intent_parser.py  modern.py  telegram_listener.py  tui.py
libs/aja-core/aja/learning/: exploration.py  strategy_store.py
libs/aja-core/aja/memory/: experience_store.py  failure_memory.py  manager.py  secretary.py  territory.py  vector.py
libs/aja-core/aja/observability/: metrics.py  replay.py  telemetry.py  trace.py
libs/aja-core/aja/orchestration/: gateway.py  handover.py  registry.py  swarm.py
libs/aja-core/aja/persistence/: recovery.py  tasks.py  tools.py  tracker.py  triggers.py
libs/aja-core/aja/planning/: __init__.py  dag_validator.py  execution_bridge.py  failure_classifier.py  failure_memory.py  generator.py  method_learner.py  method_pruner.py  method_retriever.py  method_scorer.py  method_store.py  methods.py  models.py  plan_store.py  planner.py  react_executor.py  replanner.py  scheduler.py  scorer.py  selector.py  simulation.py  verification.py  verifier.py  version_store.py
libs/aja-core/aja/presence/: agent_loop.py  approval.py  notifier.py  state.py  trigger_engine.py
(+546 files in other folders)
