[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aja-core"
version = "0.1.0"
description = "Core logic for AJA Swarm Orchestrator"
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp",
    "python-dotenv",
    "lancedb",
    "rich",
    "textual",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "wsproto",
    "python-telegram-bot",
    "openai",
    "requests",
    "prompt_toolkit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aja*"]
